Changed some layout

--- a/animation.html
+++ b/animation.html
@@ -8,6 +8,10 @@
     <body>
         <nav><button onclick="window.location.href = 'index.html'">Back</button></nav>
 
+        <a href="animationexplanation.html">
+            <button class="wandering-button">Click Me</button>
+        </a>
+
         <div class="loader"></div>
     </body>
 </html>
